@@ -199,6 +199,7 @@ unsigned int	pbs_rm_port;
 tlist_head	mom_polljobs;	/* jobs that must have resource limits polled */
 tlist_head	svr_newjobs;	/* jobs being sent to MOM */
 tlist_head	svr_alljobs;	/* all jobs under MOM's control */
+tlist_head	mom_varattrs;	/* variable attributes */
 int		termin_child = 0;
 time_t		time_now = 0;
 time_t		polltime = 0;
@@ -315,6 +316,7 @@ static unsigned long setcheckpolltime(char *);
 static unsigned long settmpdir(char *);
 static unsigned long setlogfilemaxsize(char *);
 static unsigned long setlogfilerolldepth(char *);
+static unsigned long setvarattr(char *);
 
 static struct specials {
   char            *name;
@@ -349,6 +351,7 @@ static struct specials {
     { "tmpdir",       settmpdir },
     { "log_file_max_size", setlogfilemaxsize},
     { "log_file_roll_depth", setlogfilerolldepth},
+    { "varattr",       setvarattr},
     { NULL,           NULL } };
 
 
@@ -360,6 +363,7 @@ static char *reqmsg(struct rm_attribute *);
 static char *reqgres(struct rm_attribute *);
 static char *reqstate(struct rm_attribute *);
 static char *getjoblist(struct rm_attribute *);
+static char *reqvarattr(struct rm_attribute *);
 /* static char *nullproc(struct rm_attribute *); */
 
 
@@ -372,6 +376,7 @@ struct config common_config[] = {
   { "gres",      {reqgres} },
   { "state",     {reqstate} },
   { "jobs",      {getjoblist} },
+  { "varattr",   {reqvarattr} },
   { NULL,        {NULL} } };
 
 int                     LOGLEVEL = 0;  /* valid values (0 - 10) */
@@ -805,6 +810,130 @@ static char *getjoblist(
 
   return(list);
   }
+
+static char *reqvarattr(
+  
+  struct rm_attribute *attrib)
+  
+  {           
+  static char id[] = "reqvarattr";
+  static char *list=NULL,*child_spot;
+  static int listlen=0;
+  struct varattr *pva;
+  int   i, fd, len, child_len;
+  FILE  *child;
+
+
+  if (list == NULL)
+    {
+    list = calloc(BUFSIZ + 50,sizeof(char));
+
+    listlen = BUFSIZ;
+    }
+    
+  *list='\0'; /* reset the list */
+
+  if ((pva = (struct varattr *)GET_NEXT(mom_varattrs)) == NULL)
+    {
+    return(NULL);
+    }
+  else
+    {
+    for (;pva != NULL;pva = (struct varattr *)GET_NEXT(pva->va_link))
+      {
+      if ((pva->va_lasttime==0) || (time_now >= (pva->va_ttl + pva->va_lasttime)))
+        {
+        if ((pva->va_ttl == -1) && (pva->va_lasttime != 0))
+          continue;  /* ttl of -1 is only run once */
+          
+        pva->va_lasttime=time_now;
+
+        if (pva->va_value == NULL)
+          pva->va_value=calloc(128,sizeof(char));
+
+        /* execute script and get a new value */
+        if ((child = popen(pva->va_cmd,"r")) == NULL) 
+          {
+          sprintf(pva->va_value,"error: %d %s",errno,strerror(errno));
+          }
+        else
+          {
+
+          fd = fileno(child);
+
+          child_spot = pva->va_value;
+          child_len = 0;
+          child_spot[0] = '\0';
+
+retryread:
+          while ((len = read(fd,child_spot,127 - child_len)) > 0)
+            {
+            for (i = 0;i < len;i++)
+              {
+              if (child_spot[i] == '\n')
+                break;
+              }
+
+            if (i < len)
+              {
+              /* found newline */
+        
+              child_len += i + 1;
+
+              break;
+              }
+
+            child_len += len;
+            child_spot += len;
+
+            if (child_len >= 127)
+              break;
+            }
+
+          if (len == -1)
+            {
+            if (errno==EINTR)
+              goto retryread;
+
+            log_err(errno,id,"pipe read");
+
+            sprintf(pva->va_value,"? %d",
+              RM_ERR_SYSTEM);
+
+            fclose(child);
+            }
+          else
+            {
+            pclose(child);
+
+            if (child_len > 0)
+              pva->va_value[child_len - 1] = '\0';   /* hack off newline */
+            }
+          } /* END popen */
+        } /* END execute command */
+                     
+      if (pva->va_value[0] != '\0')
+        {
+        if (*list != '\0')
+          strcat(list,"+");
+
+        strcat(list,pva->va_name);
+        strcat(list,":");
+        strcat(list,pva->va_value);
+        }
+
+      if ((int)strlen(list) >= listlen)
+        {
+        listlen += BUFSIZ;
+        list=realloc(list,listlen);
+        }
+
+      }
+    }
+
+  return(list);
+  }
+
 
 
 
@@ -2338,6 +2467,59 @@ static unsigned long setlogfilerolldepth(
    }
 
 
+static u_long setvarattr(
+
+  char *value)  /* I */
+
+  {
+  static char *id = "setvarattr";
+  struct varattr *pva;
+  char *tmpc;
+
+  pva = calloc(1,sizeof(struct varattr));
+
+  if (pva == NULL)
+    {
+    log_err(errno,id,"no memory");
+
+    return 0;
+    }
+  CLEAR_LINK(pva->va_link);
+
+  pva->va_name = strdup(value);
+
+  /* step forward to get the ttl value */
+  tmpc=strchr(pva->va_name,' ');
+  if (tmpc == NULL)
+    {
+    free(pva->va_name);
+    free(pva);
+    return 0;
+    }
+
+  *tmpc='\0';
+  tmpc++;
+  pva->va_ttl = strtol(tmpc, NULL, 10);
+  
+  /* step forward to get the command */
+  tmpc=strchr(tmpc,' ');
+  if (tmpc == NULL)
+    {
+    free(pva->va_name);
+    free(pva);
+    return 0;
+    }
+
+  *tmpc='\0';
+  tmpc++;
+  pva->va_cmd=tmpc;
+
+  append_link(&mom_varattrs,&pva->va_link,pva);
+
+  return 1; 
+}
+
+
 void check_log()
    {
    last_log_check = time_now;
@@ -3296,6 +3478,7 @@ void is_update_stat(
     "size",
     "state",
     "jobs",
+    "varattr",
     NULL };
 
   char   cp[1024];
@@ -3994,6 +4177,8 @@ int rm_request(
 
             job *pjob;
 
+            struct varattr *pva;
+
             time(&Now);
 
             ptr = name + strlen("diag");
@@ -4334,6 +4519,24 @@ int rm_request(
               }
 #endif
                 
+            if ((pva = (struct varattr *)GET_NEXT(mom_varattrs)) != NULL)
+              {
+              MUStrNCat(&BPtr,&BSpace,"Varattrs:\n");
+              while (pva != NULL)
+                {
+                sprintf(tmpLine,"  name=%s  ttl=%d last=%s    cmd=%s value=%s\n",
+                  pva->va_name,
+                  pva->va_ttl,
+                  ctime(&pva->va_lasttime),
+                  pva->va_cmd,
+                  pva->va_value);
+
+                MUStrNCat(&BPtr,&BSpace,tmpLine);
+
+                pva = (struct varattr *)GET_NEXT(pva->va_link);
+                }
+              }
+
             MUStrNCat(&BPtr,&BSpace,"\ndiagnostics complete\n");
 
             log_record(PBSEVENT_SYSTEM,0,id,"internal diagnostics complete");
@@ -6270,6 +6473,7 @@ int main(
   CLEAR_HEAD(svr_alljobs);
   CLEAR_HEAD(mom_polljobs);
   CLEAR_HEAD(svr_requests);
+  CLEAR_HEAD(mom_varattrs);
 
   if ((c = gethostname(mom_host,PBS_MAXHOSTNAME)) == 0) 
     {
